--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,7 @@ jobs:
           ruby-version: 2.7.4
 
       - name: Install dependent libraries
-        run: |
-          sudo apt-get install libpq-dev
-          sudo apt update
+        run: sudo apt-get install libpq-dev
 
       - name: Bundle install
         run: |
