--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,7 @@ jobs:
           vote_smart_key: ${{secrets.VOTE_SMART_KEY}}
 
       - name: Run RSpec
-        run: |
-          echo "vote_smart_key = $VOTE_SMART_KEY"
+        run: 
           COVERAGE=true bundle exec rspec  --require rails_helper
         env:
           RAILS_ENV: test
