--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           vote_smart_key: ${{secrets.VOTE_SMART_KEY}}
 
       - name: Run RSpec
-        run: 
+        run: |
           COVERAGE=true bundle exec rspec  --require rails_helper
         env:
           RAILS_ENV: test
